[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "janim"
authors = [
    {name = "jkjkil4"}
]
readme = "README.md"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python"
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "colour",
    "rich",
    "moderngl",
    "tqdm",
    "psutil",
    "skia-pathops",
    "fontTools",
    "freetype-py",
    "pillow",
    "svgelements",
]

[project.optional-dependencies]
gui = [
    "pyside6",
    "qdarkstyle",
    "beautifulsoup4",
    "pyaudio",
]
doc = [
    "sphinx",
    "sphinx-copybutton",
    "furo",
    "jinja2",
    "docutils",
]

[tool.flit.sdist]
exclude = [
    ".vscode/", ".github/", "assets/", "doc/", "test/",
    ".pypirc",
    "janim/locale/source",
    "janim/locale/compile.py",
    "janim/locale/gettext.py",
    "janim/locale/intl.py",
    "janim/locale/*/LC_MESSAGES/*.po"
]

[project.urls]
Home = "https://github.com/jkjkil4/JAnim"
Source = "https://github.com/jkjkil4/JAnim"
Documentation = "https://janim.rtfd.io"

[project.scripts]
janim = "janim.__main__:main"
