[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "janim"
authors = [
    {name = "jkjkil4"}
]
readme = "README.md"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python"
]
requires-python = ">=3.12"
dependencies = [
    "attrs",
    "numpy",
    "pyquaternion",
    "colour",
    "rich",
    "moderngl",
    "PyOpenGL",
    "tqdm",
    "psutil",
    "skia-pathops",
    "fontTools",
    "freetype-py",
    "pillow",
    "svgelements",
    "typst>=0.14.1",
]

[project.optional-dependencies]
gui = [
    "pyside6",
    "qdarkstyle",
    "beautifulsoup4",
    "pyaudio; sys_platform == 'win32'",
]
doc = [
    "sphinx",
    "sphinx-copybutton",
    "sphinx-tabs",
    "furo",
    "jinja2",
    "docutils",
]
test = [
    "opencv-python",
]

[tool.flit.sdist]
exclude = [
    ".asv/", ".vscode/", ".github/", "assets/", "doc/", "benchmarks/", "test/", "scripts/",
    ".pypirc",
    ".coveragerc",
    ".readthedocs.yaml",
    ".gitignore",
    "uv.lock",
    "asv.conf.json",
    "janim/gui/*.ui",
    "janim/locale/source",
    "janim/locale/compile.py",
    "janim/locale/gettext.py",
    "janim/locale/intl.py",
    "janim/locale/*/LC_MESSAGES/*.po"
]

[project.urls]
Home = "https://github.com/jkjkil4/JAnim"
Source = "https://github.com/jkjkil4/JAnim"
Documentation = "https://janim.rtfd.io"

[project.scripts]
janim = "janim.__main__:main"
